WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119122
REGRESSION(
r139282
): Fix document leak when selection is created inside the document
https://bugs.webkit.org/show_bug.cgi?id=119122
Summary
REGRESSION(r139282): Fix document leak when selection is created inside the d...
Ryosuke Niwa
Reported
2013-07-25 20:43:10 PDT
The FrameSelection::m_previousCaretNode may hold onto a Node inside the document with the selection. Merge
https://chromium.googlesource.com/chromium/blink/+/b908cb4c8da93316d787de31c93f2a43de332a10
Attachments
Fixes the bug
(4.90 KB, patch)
2013-07-25 20:50 PDT
,
Ryosuke Niwa
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-07-25 20:50:08 PDT
Created
attachment 207505
[details]
Fixes the bug
Radar WebKit Bug Importer
Comment 2
2013-07-25 20:50:42 PDT
<
rdar://problem/14556358
>
Ryosuke Niwa
Comment 3
2013-07-25 20:56:03 PDT
Clearly, this is a regression from
http://trac.webkit.org/changeset/146403
.
Ryosuke Niwa
Comment 4
2013-07-25 20:57:18 PDT
Rather
http://trac.webkit.org/changeset/139282
.
Ryosuke Niwa
Comment 5
2013-07-25 20:58:01 PDT
Committed
r153366
: <
http://trac.webkit.org/changeset/153366
>
Alexey Proskuryakov
Comment 6
2013-07-30 13:28:35 PDT
The test added here is super flaky (maybe b/f cache)? I can reproduce locally with run-webkit-tests editing/selection/leak-document-with-selection-inside.html --repeat-each 2
Alexey Proskuryakov
Comment 7
2013-07-30 15:16:26 PDT
Added a gc() call in <
http://trac.webkit.org/r153498
>, let's see how much this helps.
David Kilzer (:ddkilzer)
Comment 8
2015-06-20 09:06:03 PDT
(In reply to
comment #7
)
> Added a gc() call in <
http://trac.webkit.org/r153498
>, let's see how much > this helps.
Test is flaking a bit more in June 2015:
Bug 146182
: editing/selection/leak-document-with-selection-inside.html is flaky (always fails on Apple Win 7) <
https://bugs.webkit.org/show_bug.cgi?id=146182
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug